# adidas

./: .gitignore  MANIFEST.in  Makefile  README.md  get_raw_data.py  main.py  presentation.ppt  pyproject.toml  setup.py
.github/workflows/: ci.yml
adidas/: application.py  main.py
adidas/conf/: config.py
adidas/etl/: etl_base.py  raw_data.py  raw_to_parse.py  run_sql.py
adidas/utils/: udfhelper.py  utils.py
cil/get_book_with_most_pages/: .part-00000-f77f08f7-35a6-4a56-aa89-9edf5f264a31-c000.csv.crc  part-00000-f77f08f7-35a6-4a56-aa89-9edf5f264a31-c000.csv
cil/get_no_of_authors_with_one_book_per_yr/: .part-00000-5198ac11-73e0-46fe-81fe-3acba73133b4-c000.csv.crc  part-00000-5198ac11-73e0-46fe-81fe-3acba73133b4-c000.csv
cil/get_no_of_published_books_and_authors/: .part-00000-7042f879-b2e1-4958-8dd5-0562d6a600ec-c000.csv.crc  part-00000-7042f879-b2e1-4958-8dd5-0562d6a600ec-c000.csv
cil/get_top_5_coauthors/: .part-00000-cc598339-13c2-45e9-aff6-a58daa902be2-c000.csv.crc  part-00000-cc598339-13c2-45e9-aff6-a58daa902be2-c000.csv
cil/get_top_5_genres/: .part-00000-1d604118-7806-41df-aa64-17b92e782602-c000.csv.crc  part-00000-1d604118-7806-41df-aa64-17b92e782602-c000.csv
dags/: adidas_airflow_job.py
parse/load_date=2021-11-28/: .part-00000-4d653cbb-581c-4c22-8aec-fa85749b0222.c000.snappy.orc.crc  .part-00000-4e509b27-088f-42f4-b777-9f1a57a5de6b.c000.snappy.orc.crc  .part-00001-4d653cbb-581c-4c22-8aec-fa85749b0222.c000.snappy.orc.crc  .part-00002-4d653cbb-581c-4c22-8aec-fa85749b0222.c000.snappy.orc.crc  (+22 more)
tests/etl/: raw_to_parse_test.py  run_sql_test.py
(+10 files in other folders)
