[tool.poetry]
name = "adidas"
version = "0.1.0"
description = "case study for data engineer"
authors = ["ananth.rao"]
license = "test"

[tool.poetry.dependencies]
python = "^3.8"
pyspark = "^3.2.0"
apache-airflow = "^2.2.2"
wget = "^3.2"
click = "^8.0.3"
mypy = "^0.910"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
black = "^21.11b1"
pylint = "^2.12.1"
pytest = "^6.2.5"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
